# homelab

./: .gitignore  MODULE.bazel  setup
infra/: BUILD
infra/scripts/: BUILD.bazel  build-img  disk-layout.sfdisk
scripts/: 10-br0.network  10-tap0.network  OVMF_VARS.4m.fd  README.md  br0-nat.service  find-qga-ip  start-qemu-vm
tools/qemu/: BUILD  build_qcow2.bzl  toolchain.bzl
